--- a/basic.html
+++ b/basic.html
@@ -9,5 +9,9 @@
 <body>
   <h1>html에 대해</h1>
   <p>HTML은 Hyper Text Markup Language의 약자로 웹페이지의 구조를 설계하는 언어입니다.</p>
+  <h1>CSS란?</h1>
+  <p>Cascading Style Sheets의 약자로 마크업 요소에 스타일을 지정할 때 사용할 수 있는 언어입니다.</p>
+  <h1>Javascript란?</h1>
+  <p>스크립트 언어로 HTML에 동적인 효과를 지정할 수 있는 언어입니다.</p>
 </body>
 </html>
